syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/procd/proto";

service Procd {
  rpc RunProc(RunProcRequest) returns (RunProcResponse);
}

message RunProcRequest {
  string realm = 1;
  ProcProto procProto = 2;
}

message RunProcResponse {
}
